plugins {
    id "org.owasp.dependencycheck" version "5.3.2.1"
    id "com.github.johnrengelman.shadow" version "6.0.0"
    id "java"
}

repositories {
    mavenCentral()
}

java {
    sourceCompatibility = 17
    targetCompatibility = 17
}

dependencies {
    implementation 'org.slf4j:slf4j-api:1.7.32'
    implementation 'org.apache.logging.log4j:log4j-slf4j-impl:2.14.1'
    implementation 'org.apache.logging.log4j:log4j-api:2.14.1'
    implementation 'org.apache.logging.log4j:log4j-core:2.14.1'
    implementation 'com.google.code.gson:gson:2.8.9'
}

group = 'EmeraldLauncher'
version = '1.6-SNAPSHOT'

jar {
    manifest {
        attributes "Version" : project.version
        attributes "Main-Class": "Launcher.Main"
    }
}